image problem solved
image not showing problem solved and footer design update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .hero-bg {
-  background-image: url('/assets/images/hero-bg.png');
+  background-image: url('assets/images/hero-bg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -236,4 +236,38 @@ textarea {
   font-size: 17px;
   border: none;
   cursor: pointer;
+}
+/* footer css */
+.footer {
+  background: #fff;
+  text-align: center;
+  padding: 40px 20px;
+  font-size: 14px;
+  color: #666;
+  border-top: 1px solid #e0e0e0;
+}
+
+.footer .logo{
+  font-size: 100px;
+}
+
+.footer p {
+  max-width: 50%;
+  color: #666;
+  font-size: 16px;
+}
+
+.footer nav {
+  margin-top: 20px;
+}
+
+.footer nav a {
+  margin: 0 10px;
+  text-decoration: none;
+  color: #8987A1;
+  font-size: 18px;
+}
+
+.footer nav a:hover {
+  color: #3a36ff;
 }
